# blockFest

./: README.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.js
frontend/app/about/: page.jsx
frontend/app/api/: soroban-utils.js
frontend/app/api/mint-ticket/: route.js
frontend/app/events/: page.jsx
frontend/app/my-profile/: page.jsx
frontend/components/: EventCreationForm.jsx  WalletConnectButton.jsx
frontend/components/events/: EventCard.jsx  EventHeader.jsx  EventOrganizer.jsx  EventSidebar.jsx  PaymentModal.jsx
frontend/components/layout/: footer.jsx  header.jsx
frontend/components/nft/: NftCard.jsx
frontend/components/tickets/: TicketCard.jsx
frontend/hooks/: useWallet.js
frontend/services/: artisticNftService.js  index.js  nftService.js  sorobanService.js  ticketNftService.js  walletService.js
frontend/store/: walletStore.js
frontend/utils/: ipfs.js
soroban-contracts/: Cargo.toml
soroban-contracts/contracts/artistic-nft/: Cargo.toml  Makefile
soroban-contracts/contracts/artistic-nft/src/: lib.rs  test.rs
soroban-contracts/contracts/artistic-nft/test_snapshots/test/: test_artistic_nft.1.json  test_artistic_nft_basic.1.json  test_batch_mint.1.json  test_mint_before_enabling.1.json  test_transfer_nft.1.json
soroban-contracts/contracts/ticket-nft/: Cargo.toml  Makefile
soroban-contracts/contracts/ticket-nft/src/: lib.rs  test.rs
soroban-contracts/contracts/ticket-nft/test_snapshots/test/: test_multiple_tickets.1.json  test_ticket_nft.1.json  test_ticket_nft_basic.1.json
(+4 files in other folders)
