[package]
name = "artistic-nft"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-non-fungible = { git = "https://github.com/OpenZeppelin/stellar-contracts" }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
